--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
             <button class="btn btn-lg rounded-0 bg-dark px-5 py-3 text-light ">Shop</button>
         </div>
         <P> </P>
-        <div class="d-flex justify-content-between mb-3">
-            <div class="col card mx-2 bg-dark text-light p-3">
-                <h4 class="pb-4">Women</h4>
+        <div class="d-flex justify-content-between mb-3 py-5">
+            <div class="col card mx-2 bg-dark text-light p-5">
+                <h4 class="pb-4 text-center">Women</h4>
                 <button class="btn btn-md bg-light w-50">Shop now -></button>
             </div>
-            <div class="card col mx-2 bg-dark text-light p-3">
-                <h4 class="pb-4">Men</h4>
-                <button class="btn btn-md bg-light w-50">Shop now -></button>
+            <div class="card col mx-2 bg-dark text-light p-5">
+                <h4 class="pb-4 text-center">Men</h4>
+                <button class="btn btn-md bg-light w-50 ">Shop now -></button>
             </div>
         </div>
         <section>
